2009-01-18  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.[ch] (twitux_app_show_notification): 
	* src/twitux-parser.c (twitux_parser_timeline): 
	Display messages in notification. (Patch provided by Thomas Thurman)

2009-01-11  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux.h:
	* src/twitux-network.[ch]:
	Use https instead of http. (Evan McClain)

2009-01-01  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/twitux-parser.c (parser_convert_time):
	Fix incorrect pluralising of relative time. (Deskin Miller)

2008-12-28  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-label.c (label_msg_get_string): 
	Use strjoin. (Mike Lundy)

2008-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c (parser_twitux_node_status): 
	Fix the double-escaping of < and >. (Mike Lundy)


2008-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c (twitux_network_get_image): 
	Fix crash when fetching images. (Mike Lundy)

2008-12-14  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.68.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* src/twitux-spell.c:
	* src/Makefile.am:
	Use enchant for spell checking, instead of aspell.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-about.c (WEB_SITE):
	Update link to use Sourceforge summary page.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c:
	* src/twitux-network.[ch] (twitux_network_get_image): 
	Handle avatars a little more sensibly. (#1963695)

2008-12-07  Brian Pepple  <bpepple@fedoraproject.org>

	* libtwitux/twitux-keyring.h:
	* libtwitux/twitux-xml.[ch]:
	* src/twitux-about.[ch]:
	* src/twitux-add-dialog.[ch]:
	* src/tiwtux-account-dialog.[ch]:
	* src/twitux-app.h:
	* src/twitux-dbus.h:
	* src/twitux-geometry.h:
	* src/twitux-hint.[ch]:
	* src/twitux-lists-dialog.[ch]:
	* src/twitux-main.c: 
	* src/twitux-preferences.[ch]:
	* src/twitux-send-message-dialog.[ch]: